[package]
name = "wms"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-auth = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-server = { version = "0.7" }
dotenv = "0.15"
futures-util = "0.3"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
urlencoding = "2.1"
uuid = { version = "1.11", features = ["v4"] }
